# VersionCoordinator

./: .gitignore  .vc.yaml  Cargo.toml  readme.md  wait-for-drone-build.sh
hs-model/: CHANGELOG.md  README.md  Setup.hs  package.yaml  stack.yaml  version-coordinator.cabal
hs-model/src/: Main.hs
hs-model/test/: Spec.hs
src/: bump.rs  config.rs  error.rs  fix.rs  git.rs  main.rs  show.rs  tag.rs  verify.rs  version.rs
