[package]
name = "version-coordinator"
description = "Coordinate version numbers in a source code repository"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
license = "Apache-2.0"
version = "0.1.17"
edition = "2021"
publish = ["si"]

[[bin]]
name = "vc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.9"
clap_mangen = "0.2.17"
env_logger = "0.10.1"
log = "0.4.20"
nom = "7.1.3"
nondestructive = "0.0.18"
parse-display-derive = "0.8.2"
regex = "1.10.2"
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.110", features = ["preserve_order"] }
serde_with = "3.4.0"
serde_yaml = "0.9.29"
thiserror = "1.0.52"
toml = "0.8.8"
toml_edit = "0.21.0"
